<?xml version="1.0"?>
<package format="2">
  <name>xbt_behaviortree</name>
  <version>0.0.0</version>
  <description>The xbt_behaviortree package</description>

  <maintainer email="itchuang@ucdavis.edu">Ian Chuang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>explain_bt</depend>
  <depend>robotiq_2f_gripper_control</depend>
  <depend>moveit_msgs</depend>
  <depend>geometric_shapes</depend>
  <depend>controller_manager_msgs</depend>
  <depend>control_msgs</depend>
  <depend>xbt_planning_interface</depend>
  <depend>compliant_trajectory_control</depend>

</package>
